--- a/index.html
+++ b/index.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/style.css">
+    <!-- responsive css -->
+    <link rel="stylesheet" href="assets/responsive.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- Aos Animation style -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-<body>
-    <h1>html hfbjhrb fmfdfjkdjfdeddnffh</h1>
+<body data-aos-easing="ease" data-aos-duration="1000" data-aos-delay="0">
+    <header id="header">
+        <nav class="nav-menu">
+            <ul>
+                <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
+                <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
+                <li><a href="#skills"><i class="bx bx-server"></i> <span>Skills</span></a></li>
+                <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+                <li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="heroBannerMain" id="hero">
+        <div class="siteContainer  aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
+            <h1>Abhishek Panwar</h1>
+            <p>
+                <span class="typed"></span>
+            </p>
+            <div class="social-links">
+                <a target="_blank" data-social-email="" href="mailto:ajayxdodiya@gmail.com" class="email"><i class="bx bx-envelope"></i></a>
+                <a target="_blank" data-social-call href="#" class="call"><i class="bx bx-phone-call"></i></a>
+                <!--<a target="_blank" data-social-skype href="#" class="skype"><i class="bx bxl-skype"></i></a>-->
+                 <a target="_blank" data-social-instagram="" href="#" class="instagram"><i class="bx bxl-instagram"></i></a>   
+                 <a target="_blank" data-social-github="" href="https://github.com/ajayxdodiya" class="github"><i class="bx bxl-github"></i></a>       
+                <a target="_blank" data-social-linkedin="" href="https://linkedin.com/in/ajayxdodiya" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                 <a target="_blank" data-social-whatsapp href="#" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+              </div>
+        </div>
+    </section>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.js"
+    integrity="sha512-+k1pnlgt4F1H8L7t3z95o3/KO+o78INEcXTbnoJQ/F2VqDVhWoaiVml/OEHv9HsVgxUaVW+IbiZPUJQfF/YxZw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!-- Aos Script -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<!-- typed script -->
+<script src="assets/typed.min.js"></script>
+<script>
+      AOS.init();
+    var typed = new Typed('.typed', {
+        strings: ["Web Developer", "Web Designer", " UI Developer", "Wordpress Developer"],
+        typeSpeed: 70,
+        loop: true,
+        showCursor: true,
+    });
+
+</script>
+
 </html>
